Bug 314982 - Dolphin is not updating folder contents for /dev/shm, but Thunar could
Summary: Dolphin is not updating folder contents for /dev/shm, but Thunar could
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.10.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-12 09:28 UTC by Aaron Lewis
Modified: 2014-12-29 12:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Don't exclude /dev/shm from the possible directories to watch (982 bytes, patch)
2014-11-23 16:17 UTC, Alberto Sánchez Molero
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Lewis 2013-02-12 09:28:00 UTC
Hi,

When I put a file to /dev/shm, dolphin doesn't update contents unless I press F5, but Thunar could recognize this change, was it a bug?

Reproducible: Always
Comment 1 Frank Reininghaus 2013-02-12 10:46:59 UTC
Thanks for the report! Yes, it probably is a bug, but not in Dolphin. KDirLister from KIO is responsible for telling us about new files.

Adjusting severity - if you think that this is a 'major' bug, then more than 75% of all bugs are major, and this label wouldn't be useful any more ;-)
Comment 2 Aaron Lewis 2013-02-12 13:32:24 UTC
Hi Frank,

Ah sure, thanks for helping me tweaking these!

(I'm not quite sure about severity here)

On 10:46 Tue 12 Feb     , Frank Reininghaus wrote:
> https://bugs.kde.org/show_bug.cgi?id=314982
> 
> Frank Reininghaus <frank78ac@googlemail.com> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                  CC|                            |frank78ac@googlemail.com
>           Component|general                     |general
>             Version|2.2                         |4.10.0
>            Assignee|dolphin-bugs-null@kde.org   |faure@kde.org
>             Product|dolphin                     |kio
>            Severity|major                       |normal
> 
> --- Comment #1 from Frank Reininghaus <frank78ac@googlemail.com> ---
> Thanks for the report! Yes, it probably is a bug, but not in Dolphin.
> KDirLister from KIO is responsible for telling us about new files.
> 
> Adjusting severity - if you think that this is a 'major' bug, then more than
> 75% of all bugs are major, and this label wouldn't be useful any more ;-)
> 
> -- 
> You are receiving this mail because:
> You reported the bug.
Comment 3 Alberto Sánchez Molero 2014-11-23 16:17:05 UTC
Created attachment 89699 [details]
Don't exclude /dev/shm from the possible directories to watch
Comment 4 Alberto Sánchez Molero 2014-11-23 16:22:16 UTC
I have been able to reproduce this bug in 4.14.2 and master. The patch I attached should fix this problem by avoiding an early return when the path starts by /dev/shm. It's mounted as a tmpfs in many distributions and some of us use it daily, so it's quite annoying to have it ignored by KDirWatch.
Comment 5 Frank Reininghaus 2014-11-25 19:04:42 UTC
Thanks for analyzing the problem and for coming up with a patch, Alberto! Could you submit the patch to https://git.reviewboard.kde.org/r/ please? The developers who are familiar with that code are much more likely to see your patch there. Patches that are attached to bug reports get overlooked very easily.
Comment 6 Alberto Sánchez Molero 2014-12-08 17:10:48 UTC
I put it here, but it seems nobody has noticed it yet. https://git.reviewboard.kde.org/r/121248/
Comment 7 Frank Reininghaus 2014-12-29 11:57:57 UTC
Git commit e47a43e05811062ed634379543b77b1ed99025c4 by Frank Reininghaus, on behalf of Alberto Sánchez Molero.
Committed on 29/12/2014 at 11:54.
Pushed by freininghaus into branch 'KDE/4.14'.

Don't exclude /dev/shm from the possible directories to watch
REVIEW: 121248

M  +2    -1    kdecore/io/kdirwatch.cpp

http://commits.kde.org/kdelibs/e47a43e05811062ed634379543b77b1ed99025c4
Comment 8 Frank Reininghaus 2014-12-29 12:05:38 UTC
Git commit 339e4bcd0ec5337f2fba65faea3289558542dae1 by Frank Reininghaus, on behalf of Alberto Sánchez Molero.
Committed on 29/12/2014 at 12:03.
Pushed by freininghaus into branch 'master'.

Don't exclude /dev/shm from the possible directories to watch
REVIEW: 121248

M  +2    -1    src/lib/io/kdirwatch.cpp

http://commits.kde.org/kcoreaddons/339e4bcd0ec5337f2fba65faea3289558542dae1