Don't exclude /dev/shm from the possible directories to watch

BUG: 314982
REVIEW: 121248