kdecore/io/kdirwatch.cpp
@@ -767,7 +767,8 @@ void KDirWatchPrivate::addEntry(KDirWatch* instance, const QString& _path,
   if (path.isEmpty()
 #ifndef Q_WS_WIN
      || path == QLatin1String("/dev")
-     || (path.startsWith(QLatin1String("/dev/")) && !path.startsWith(QLatin1String("/dev/.")))
+     || (path.startsWith(QLatin1String("/dev/")) && !path.startsWith(QLatin1String("/dev/."))
+	&& !path.startsWith(QLatin1String("/dev/shm")))
 #endif
   )
     return; // Don't even go there.
